src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AIPO__c</fullName>
        <description>Numero di pezzi medio per ordine, netto resi</description>
        <inlineHelpText>Average number of items per order, net returns</inlineHelpText>
        <label>AIPO</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AIV__c</fullName>
        <formula>Listino_Acquisti_no_resi_e_gift_valuta__c/
 Totale_Pezzi_Acquistati__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AIV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AS400_Master_Code_Matching__c</fullName>
        <label>AS400_Master_Code_Matching</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS400_Master_ContactId_Matching__c</fullName>
        <label>AS400_Master_ContactId_Matching</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS400_Master_Id_Matching__c</fullName>
        <label>AS400_Master_Id_Matching</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account ID (18 digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acquisti_ultima_stagione_E_commerce__c</fullName>
        <formula>CASE($User.CurrencyISOcode__c, 
&quot;BRL&quot;, Importo_acquisti_ultima_stg_E_comm_BRL__c, 
&quot;CAD&quot;, Importo_acquisti_ultima_stg_E_comm_CAD__c, 
&quot;CHF&quot;, Importo_acquisti_ultima_stg_E_comm_CHF__c, 
&quot;CNY&quot;, Importo_acquisti_ultima_stg_E_comm_CNY__c, 
&quot;EUR&quot;, Importo_acquisti_ultima_stg_E_comm_EUR__c, 
&quot;GBP&quot;, Importo_acquisti_ultima_stg_E_comm_GBP__c, 
&quot;HKD&quot;, Importo_acquisti_ultima_stg_E_comm_HKD__c, 
&quot;JPY&quot;, Importo_acquisti_ultima_stg_E_comm_JPY__c, 
&quot;USD&quot;, Importo_acquisti_ultima_stg_E_comm_USD__c,
Importo_acquisti_ultima_stagione_E_comm__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Acquisti ultima stagione E-commerce</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aggiornamento_Matching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggiornamento Matching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aggiornato_OUT_2__c</fullName>
        <label>Aggiornato OUT 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Aggiornato_OUT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aggiornato_OUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allegati__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allegati</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allocation__c</fullName>
        <formula>Location__r.Name + &apos; - &apos; + Associate__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Allocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anagrafica_E_commerce_Yoox__c</fullName>
        <label>Anagrafica E-commerce Yoox</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anniversary_date__c</fullName>
        <formula>IF( ISBLANK( Data_Di_Registrazione__c )=false,Data_Di_Registrazione__c, datevalue(CreatedDate) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anniversary date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Cliente__c</fullName>
        <label>Area Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AD</fullName>
                </value>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AF</fullName>
                </value>
                <value>
                    <fullName>AG</fullName>
                </value>
                <value>
                    <fullName>AI</fullName>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>AN</fullName>
                </value>
                <value>
                    <fullName>AO</fullName>
                </value>
                <value>
                    <fullName>AQ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AS</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>AW</fullName>
                </value>
                <value>
                    <fullName>AX</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>BD</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BF</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>BI</fullName>
                </value>
                <value>
                    <fullName>BJ</fullName>
                </value>
                <value>
                    <fullName>BL</fullName>
                </value>
                <value>
                    <fullName>BM</fullName>
                </value>
                <value>
                    <fullName>BN</fullName>
                </value>
                <value>
                    <fullName>BO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_Cliente_txt__c</fullName>
        <label>Area Cliente</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate_Inactive__c</fullName>
        <formula>IF( OR(Associate__r.IsActive__c &lt;&gt; &quot;A&quot;,ISBLANK(Associate__c)), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Associate Inactive/Blank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_Manuale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Associate Manuale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Associate_Registrazione_ID__c</fullName>
        <label>Associate Registrazione ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Once the boutique is allocated the preferred client advisor is defined considering both amount and recency of purchases, as above</inlineHelpText>
        <label>Allocated Client Advisor</label>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associate_di_registrazione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Associate di registrazione</label>
        <referenceTo>Associated__c</referenceTo>
        <relationshipLabel>Accounts (Associate di registrazione)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Birthdate_DQ__c</fullName>
        <formula>IF (OUT_BIRTHDATE_CODE1__c =0 &amp;&amp; OUT_BIRTHDATE_CODE2__c  =0, IMAGE(&apos;/resource/pallino_bianco&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Dato Validato senza correzioni&quot;,
IF (OUT_BIRTHDATE_CODE1__c =0 &amp;&amp; OUT_BIRTHDATE_CODE2__c  =1, IMAGE(&apos;/resource/pallino_verde&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;Standardizzazione BirthDate&quot;,
IF (OUT_BIRTHDATE_CODE1__c =1 &amp;&amp; OUT_BIRTHDATE_CODE2__c  =1, IMAGE(&apos;/resource/pallino_giallo&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;BirthDate presente con Warning&quot;,
IF (OUT_BIRTHDATE_CODE1__c =2 &amp;&amp; OUT_BIRTHDATE_CODE2__c  =1, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;BirthDate non valido&quot;,
IF (OUT_BIRTHDATE_CODE1__c =2 &amp;&amp; OUT_BIRTHDATE_CODE2__c  =2, IMAGE(&apos;/resource/pallino_rosso&apos;, &apos;&apos;, 15, 15) &amp; &quot; &quot; &amp; &quot;BirthDate non presente&quot;,&quot;&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthdate DQ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Birthday__c</fullName>
        <formula>IF ( AND(MONTH(Today())=12, MONTH(PersonBirthdate)=1), 
     DATE(YEAR(Today())+1, MONTH(PersonBirthdate), DAY(PersonBirthdate)), 
     DATE(YEAR(Today()), MONTH(PersonBirthdate), DAY(PersonBirthdate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Birthday</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Boutique_Disattiva__c</fullName>
        <formula>IF(OR(Location__r.Data_Chiusura_Negozio__c &lt;= NOW(), AND(ISBLANK(Location__c), ISBLANK(First_Location__c))), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boutique Disattiva</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boutique_Disattivata__c</fullName>
        <description>La boutique di assegnazione è quella fittizia</description>
        <formula>IF( CASESAFEID(Location__c) = $Setup.Profile__c.Id_default_boutique_per_disattivaz_bout__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boutique Fittizia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boutique_Disattivata_old__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boutique Disattivata_old</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boutique_di_registrazione__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;&amp; First_Location__c , First_Location_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Boutique di registrazione</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canale_Acquisto_Preferenziale__c</fullName>
        <label>Canale acquisto preferenziale</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DOS</fullName>
                </value>
                <value>
                    <fullName>Franchising</fullName>
                </value>
                <value>
                    <fullName>Multimarca</fullName>
                </value>
                <value>
                    <fullName>E-commerce</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria_Cliente_FRM__c</fullName>
        <formula>CASE ( Categoria_Cliente__c,
&quot;VHK10&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;VHK20&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25),
&quot;VHK30&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;VCN10&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25),
&quot;VCN15&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25),
&quot;VCN20&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25),
&quot;VCN30&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25),
&quot;VJP05&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25),
&quot;VJP10&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25),     
&quot;VIP5&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;VIP10&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;VIP15&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;VIP20&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;VIP30&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;VIP40&quot;, IMAGE(&apos;/resource/categoria_vip&apos;, &apos;&apos;, 25,25), 
&quot;E-IT&quot;, IMAGE(&apos;/resource/categoria_dipendente&apos;, &apos;&apos;, 20,20), 
&quot;E-EU&quot;, IMAGE(&apos;/resource/categoria_dipendente&apos;, &apos;&apos;, 20,20), 
&quot;E-US&quot;, IMAGE(&apos;/resource/categoria_dipendente&apos;, &apos;&apos;, 20,20), 
&quot;E-OT&quot;, IMAGE(&apos;/resource/categoria_dipendente&apos;, &apos;&apos;, 20,20), 
&quot;PS&quot;, IMAGE(&apos;/resource/categoria_ps&apos;, &apos;&apos;, 20,20),
&quot;PS10&quot;, IMAGE(&apos;/resource/categoria_ps&apos;, &apos;&apos;, 20,20),
&quot;PS15&quot;, IMAGE(&apos;/resource/categoria_ps&apos;, &apos;&apos;, 20,20),
&quot;&quot;) &amp; &quot;    &quot; &amp;  Categoria_Cliente__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoria Cliente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria_Cliente_Proposta__c</fullName>
        <description>Campo categoria cliente utilizzata per richiedere l&apos;approvazione della categoria cliente ufficiale in sola lettura</description>
        <label>Categoria cliente proposta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VIP5</fullName>
                </value>
                <value>
                    <fullName>VIP10</fullName>
                </value>
                <value>
                    <fullName>VIP15</fullName>
                </value>
                <value>
                    <fullName>VIP20</fullName>
                </value>
                <value>
                    <fullName>VIP30</fullName>
                </value>
                <value>
                    <fullName>VIP40</fullName>
                </value>
                <value>
                    <fullName>VHK10</fullName>
                </value>
                <value>
                    <fullName>VHK15</fullName>
                </value>
                <value>
                    <fullName>VHK30</fullName>
                </value>
                <value>
                    <fullName>VCN10</fullName>
                </value>
                <value>
                    <fullName>VCN15</fullName>
                </value>
                <value>
                    <fullName>VCN20</fullName>
                </value>
                <value>
                    <fullName>VCN30</fullName>
                </value>
                <value>
                    <fullName>VJP05</fullName>
                </value>
                <value>
                    <fullName>VJP10</fullName>
                </value>
                <value>
                    <fullName>E-IT</fullName>
                </value>
                <value>
                    <fullName>E-EU</fullName>
                </value>
                <value>
                    <fullName>E-US</fullName>
                </value>
                <value>
                    <fullName>E-OT</fullName>
                </value>
                <value>
                    <fullName>VRU10</fullName>
                </value>
                <value>
                    <fullName>VRU15</fullName>
                </value>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>BOARD60</fullName>
                </value>
                <value>
                    <fullName>B60</fullName>
                </value>
                <value>
                    <fullName>AGENTS30</fullName>
                </value>
                <value>
                    <fullName>CONF20</fullName>
                </value>
                <value>
                    <fullName>PS10</fullName>
                </value>
                <value>
                    <fullName>PS15</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria_Cliente_Shadow__c</fullName>
        <label>Categoria di sconto approvata/rifiutata</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria_Cliente_Variazione_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Categoria cliente variazione ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Categoria_Cliente__c</fullName>
        <label>Categoria Cliente</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria_Cliente_picklist__c</fullName>
        <label>Categoria Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Categoria_di_spesa_Anno_Corrente__c</fullName>
        <formula>IF( Importo_Totale_Acquisti_Anno_Corrente__c &gt;= 100000, 
  &quot;Platinum&quot;,
  IF( Importo_Totale_Acquisti_Anno_Corrente__c &gt;= 50000,
    &quot;Gold&quot;,
    IF( Importo_Totale_Acquisti_Anno_Corrente__c &gt;= 30000,
      &quot;Super Top&quot;,
      IF( Importo_Totale_Acquisti_Anno_Corrente__c &gt;= 10000,
        &quot;Top&quot;,
        IF( Importo_Totale_Acquisti_Anno_Corrente__c &gt;= 5000,
	  &quot;High&quot;,
          IF( Importo_Totale_Acquisti_Anno_Corrente__c &gt;= 3000,
            &quot;Medium&quot;,
	    IF( Importo_Totale_Acquisti_Anno_Corrente__c &gt; 1500,
              &quot;Low&quot;,
	      &quot;Super Low&quot;
	    )
	  )
	)
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoria di spesa Anno Corrente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria_di_spesa_Anno_Precedente__c</fullName>
        <formula>IF( Importo_Totale_Acquisti_Anno_Precedente__c &gt;= 100000, 
  &quot;Platinum&quot;,
  IF( Importo_Totale_Acquisti_Anno_Precedente__c &gt;= 50000,
    &quot;Gold&quot;,
    IF( Importo_Totale_Acquisti_Anno_Precedente__c &gt;= 30000,
      &quot;Super Top&quot;,
      IF( Importo_Totale_Acquisti_Anno_Precedente__c &gt;= 10000,
        &quot;Top&quot;,
        IF( Importo_Totale_Acquisti_Anno_Precedente__c &gt;= 5000,
	  &quot;High&quot;,
          IF( Importo_Totale_Acquisti_Anno_Precedente__c &gt;= 3000,
            &quot;Medium&quot;,
	    IF( Importo_Totale_Acquisti_Anno_Precedente__c &gt; 1500,
              &quot;Low&quot;,
	      &quot;Super Low&quot;
	    )
	  )
	)
      )
    )
  )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Categoria di spesa Anno Precedente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Categoria_di_spesa__c</fullName>
        <formula>IF( Importo_Totale_Acquisti__c&gt;= 100000, 
  &quot;Platinum&quot;,
  IF( Importo_Totale_Acquisti__c&gt;= 50000,
    &quot;Gold&quot;,
    IF( Importo_Totale_Acquisti__c&gt;= 30000,
      &quot;Super Top&quot;,
      IF( Importo_Totale_Acquisti__c&gt;= 10000,
        &quot;Top&quot;,
        IF( Importo_Totale_Acquisti__c&gt;= 5000,
	  &quot;High&quot;,
          IF( Importo_Totale_Acquisti__c&gt;= 3000,
            &quot;Medium&quot;,
	    IF( Importo_Totale_Acquisti__c&gt; 1500,
              &quot;Low&quot;,
	      &quot;Super Low&quot;
	    )
	  )
	)
      )
    )
  )
)</formula>
        <inlineHelpText>Platinum: ≥ 100.000 €
Gold: 50.000 € - 100.000 €
Super Top: 30.000 € - 50.000 €
Top: 10.000 € - 30.000 €
High: 5.000 € - 10.000 €
Medium: 3.000 € - 5.000 €
Low: 1.500 € - 3.000 €
Super Low: &lt; 1.500 €</inlineHelpText>
        <label>Categoria di spesa</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cellulare__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cellulare</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Citta_UTF_8__c</fullName>
        <label>Città in caratteri locali</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cliente_Cross_Channel__c</fullName>
        <label>Cliente cross channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAR__c</fullName>
        <label>Billing Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Billing Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BAV__c</fullName>
        <label>Billing Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BRDI__c</fullName>
        <label>Billing Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__BTZ__c</fullName>
        <label>Billing Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAR__c</fullName>
        <label>Shipping Address Record Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAS__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Shipping Address Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SAV__c</fullName>
        <label>Shipping Address Vacancy</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__SRDI__c</fullName>
        <label>Shipping Residential Delivery Indicator</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CloudingoAgent__STZ__c</fullName>
        <label>Shipping Timezone</label>
        <length>48</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cognome_UTF_8__c</fullName>
        <label>Cognome in caratteri locali</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Preferences__c</fullName>
        <formula>IF( Telefono__c  = true &amp;&amp;  NOT(ISBLANK(Phone)) , IMAGE(&apos;/resource/callVerde&apos;,&apos;&apos;,25,25)+&apos; &apos;,&apos;&apos;) +

IF( Telefono__c  = false &amp;&amp;  NOT(ISBLANK(Phone)), IMAGE(&apos;/resource/callGrigia&apos;,&apos;&apos;,25,25)+&apos; &apos;,&apos;&apos;) +

IF( Email__c = true &amp;&amp; NOT(ISBLANK(PersonEmail)) , IMAGE(&apos;/resource/ChiocciolaVerde&apos;,&apos;&apos;,25,25)+&apos; &apos;,&apos;&apos;) +

IF( Email__c = false &amp;&amp;  NOT(ISBLANK(PersonEmail)), IMAGE(&apos;/resource/ChiocciolaGrigia&apos;,&apos;&apos;,25,25)+&apos; &apos;,&apos;&apos;) +

IF(Posta__c = true &amp;&amp; NOT(ISBLANK(PersonMailingAddress) ),IMAGE(&apos;/resource/emailVerde&apos;,&apos;&apos;,25,25)+&apos; &apos;,&apos;&apos;) +

IF( Posta__c = false &amp;&amp; NOT(ISBLANK(PersonMailingAddress)), IMAGE(&apos;/resource/emailGrigia&apos;,&apos;&apos;,25,25)+&apos; &apos;,&apos;&apos;) +

IF( WeChat__c = true &amp;&amp; NOT(ISBLANK(We_Chat_ID__c)), IMAGE(&apos;/resource/sharePostVerde&apos;,&apos;&apos;,25,25),&apos;&apos;) +

IF( WeChat__c = false &amp;&amp; NOT(ISBLANK(We_Chat_ID__c)), IMAGE(&apos;/resource/sharePostVerde&apos;,&apos;&apos;,25,25),&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The grey icon appears only if the corresponding data is available, the icon turns green if the customer checked his preference in the Digital Customer Card</inlineHelpText>
        <label>Contact Preferences</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacted_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Boutique dell&apos;ultimo client advisor che ha effettuato l&apos;ultimo activity</description>
        <label>Contacted by</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Accounts (Contacted by)</relationshipLabel>
        <relationshipName>Contacted_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Count_Data_Quality__c</fullName>
        <formula>FLOOR(( 
IF(ISBLANK(PersonEmail),0,4) + 
IF(ISBLANK(PersonMobilePhone),0,2) + 
IF(ISBLANK(FirstName),0,4) + 
IF(ISBLANK(LastName),0,4) + 
IF(ISBLANK(PersonMailingStreet),0,1) + 
IF(ISBLANK(PersonMailingPostalCode),0,1) + 
IF(ISBLANK(PersonMailingCity),0,1) + 
IF(ISBLANK(PersonMailingState),0,1) + 
IF(ISBLANK(TEXT(Fascia_Di_Eta__c)),0,1) + 
IF(ISBLANK(TEXT(Sesso__c)),0,1)+ 
IF(ISBLANK(TEXT(Nazionalita__c)),0,2)
)/5
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Count Data Quality</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country_MC__c</fullName>
        <formula>IF(!ISBLANK(TEXT(Country_Newsletter__c)), TEXT(Country_Newsletter__c),
IF(!ISBLANK(ShippingCountry), ShippingCountry,
PersonMailingCountry
))


/* DF 21/10
IF (!ISBLANK(TEXT(Country_Newsletter__c)), TEXT(Country_Newsletter__c), PersonMailingCountry)*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country MC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Newsletter__c</fullName>
        <label>Country Newsletter</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AE</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>AT</fullName>
                </value>
                <value>
                    <fullName>AU</fullName>
                </value>
                <value>
                    <fullName>BE</fullName>
                </value>
                <value>
                    <fullName>BG</fullName>
                </value>
                <value>
                    <fullName>BH</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CH</fullName>
                </value>
                <value>
                    <fullName>CL</fullName>
                </value>
                <value>
                    <fullName>CN</fullName>
                </value>
                <value>
                    <fullName>CZ</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DK</fullName>
                </value>
                <value>
                    <fullName>EE</fullName>
                </value>
                <value>
                    <fullName>ES</fullName>
                </value>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>FR</fullName>
                </value>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>GR</fullName>
                </value>
                <value>
                    <fullName>HK</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>JP</fullName>
                </value>
                <value>
                    <fullName>KR</fullName>
                </value>
                <value>
                    <fullName>KW</fullName>
                </value>
                <value>
                    <fullName>KZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Creato_da_Scheda_Digitale__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Creato da Scheda Digitale</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DCC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital Customer Card</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DQ_FirstName__c</fullName>
        <formula>IF((isblank(Nome_UTF_8__c)),FirstName, Nome_UTF_8__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DQ FirstName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_LastName__c</fullName>
        <formula>IF((isblank(Cognome_UTF_8__c)),LastName, Cognome_UTF_8__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DQ LastName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_MailingCity__c</fullName>
        <formula>IF((isblank(Citta_UTF_8__c)),PersonMailingCity, Citta_UTF_8__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DQ MailingCity</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DQ_Street__c</fullName>
        <formula>IF((isblank(Indirizzo_UTF_8__c)),PersonMailingStreet, Indirizzo_UTF_8__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DQ Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Annullamento__c</fullName>
        <description>data impostata dal sistema alla fine del ciclo di approvazione</description>
        <label>Data Annullamento</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Approvazione_Categoria__c</fullName>
        <label>Data approvazione categoria</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Cancellazione_Newsletter__c</fullName>
        <label>Data Cancellazione Newsletter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Di_Registrazione__c</fullName>
        <label>Data Di Registrazione</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Primo_Acquisto_E_commerce__c</fullName>
        <label>Data primo acquisto E-commerce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Primo_Acquisto__c</fullName>
        <label>Data Primo acquisto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Registrazione_Newsletter__c</fullName>
        <label>Data Iscrizione Newsletter</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ultima_Deduplica__c</fullName>
        <description>Campo alimentato da ETL ogni volta che avviene un processo di deduplica sul master</description>
        <label>Data Ultima Deduplica</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Ultima_Modifica_AS400__c</fullName>
        <label>Data Ultima Modifica AS400</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Data_Ultimo_Acquisto__c</fullName>
        <label>Data ultimo acquisto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Ultimo_Aggiornamento_Privacy__c</fullName>
        <label>Data Ultimo Aggiornamento Privacy</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_di_emissione_passaporto__c</fullName>
        <label>Data di emissione passaporto</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ultimo_acquisto_E_commerce__c</fullName>
        <label>Data ultimo acquisto E-commerce</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_ultimo_contatto_Customer_Care__c</fullName>
        <label>Data ultimo contatto Customer Care</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Descrizione_Annullamento__c</fullName>
        <label>Descrizione Annullamento</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ETL_Filter_Yoox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL Filter Yoox</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>